# pi-dj-recorder

./: .gitignore  AI_PROJECT_SUMMARY.md  README.md  pyproject.toml
app/: __init__.py  main.py  recorder.py
app/services/: __init__.py  errors.py  midi_daemon.py  midi_logs.py  models.py  parsers.py  recorder.py  recording_runtime.py  recordings_store.py  settings.py  track_ids.py  waveforms.py
app/static/: app.js  index.html  recordings.html  settings.html  styles.css
prolink-onair/: README.md  pom.xml
prolink-onair/src/main/java/com/pirecorder/prolink/: ProlinkOnair.java
scripts/: restart-services.sh  update-pi.sh  watch-logs.sh
systemd/: pi-prolink-onair.service  pi-recorder.service
tests/: test_api.py  test_recorder.py
