[project]
name = "pi-dj-recorder"
version = "0.1.0"
description = "FastAPI web recorder for DJ mixes on Raspberry Pi using FFmpeg, waveform playback, and MIDI on-air logging"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
